Updating Idea versions and adding gradle tasks for IDEA runConfiguration generation